--- a/raffle-microservice/raffle-service/src/main/resources/public/default.css
+++ b/raffle-microservice/raffle-service/src/main/resources/public/default.css
@@ -19,24 +19,26 @@ canvas {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(204,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: #e00; /* Fallback color */
+ 
 }
 
-div{background-color:#e00 !important; top: 0vh; overflow:hidden;}
-div{animation: tada 1s cubic-bezier(.5,.2,.2,1.5); transition: all .3s ease; position:relative; border-radius: .5em;}
+div{background-color:#e00 !important; top: 0vh; }
+div{animation: tada 1s cubic-bezier(.5,.2,.2,1.5); transition: all .3s ease;  border-radius: .5em;}
 
-div:before{content:""; position:absolute; top:0; left: -25%; display:block; animation: swoopy 1s ease; 
-background-color:#eee; width: 20%; height:100%; transform:skew(-45deg);}
+div:before{content:""; opacity:0; position:absolute; top:0; left: -25%; display:block; animation: swoopy 1s ease; 
+background-color:#eee; width: 25%; height:100%; transform:skew(-45deg);}
 @keyframes swoopy{
-    100%{left: 150%;}
+    0%{opacity:0}
+    50%{opacity:1;}
+    100%{left: 150%; opacity:0}
 }
 
 
 @keyframes tada{
     0%{transform:scale(.9); opacity:0}
 }
-div {user-select:none; cursor:pointer;}
+div {user-select:none; cursor:pointer; overflow:hidden;}
 div:hover{background-color:#bbb !important;}
 
 
@@ -45,7 +47,8 @@ div:hover{background-color:#bbb !important;}
     background-color: #cc0000;
     font: 60px overpass;
     text-align: center;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15vh auto; 
+    height: 70vh;/* 15% from the top and centered */
     padding: 20px;
     border: 0px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
@@ -65,3 +68,14 @@ div:hover{background-color:#bbb !important;}
     text-decoration: none;
     cursor: pointer;
 } 
+
+*{box-sizing:border-box;}
+blockquote{ opacity:0;  pointer-events:none;  animation: legalbug 2.5s ease forwards; background-color:#eee; font-size: 2vw; left:0; margin:0; padding: 1rem;}
+
+blockquote:after{content:""; position:absolute; bottom:0; left:0; background-image:linear-gradient(0deg, #fff, transparent);display:block; width: 100%; height: 15em;   }
+
+@keyframes legalbug{
+    0%{opacity:0 !important; transform: translate(0, 5em);}
+    100%{opacity:1; transform:0}
+}
+
