--- a/raffle-microservice/raffle-service/src/main/resources/public/default.css
+++ b/raffle-microservice/raffle-service/src/main/resources/public/default.css
@@ -1,3 +1,48 @@
+@font-face {
+  font-family: 'redhat-display';
+  src: url('/RedHatDisplay-Regular.eot');
+  src: url('/RedHatDisplay-Regular.eot?#iefix') format('embedded-opentype'),
+       url('/RedHatDisplay-Regular.woff2') format('woff2'),
+       url('/RedHatDisplay-Regular.woff') format('woff');
+       font-weight: 400;
+       font-style: normal;
+}
+
+@font-face {
+  font-family: 'redhat-display';
+  src: url('RedHatDisplay-Medium.eot');
+  src: url('RedHatDisplay-Medium?#iefix') format('embedded-opentype'),
+       url('RedHatDisplay-Medium.woff2') format('woff2'),
+       url('RedHatDisplay-Medium.woff') format('woff');
+       font-weight: 600;
+       font-style: normal;
+}
+
+
+ 
+
+@font-face {
+  font-family: 'redhat-display';
+  src: url('fonts/RedHatDisplay-Boldt');
+  src: url('fonts/RedHatDisplay-Bold') format('embedded-opentype'),
+       url('fonts/RedHatDisplay-Bold.woff2') format('woff2'),
+       url('fonts/RedHatDisplay-Bold.woff') format('woff');
+       font-weight: 700;
+       font-style: normal;
+}
+
+@font-face {
+  font-family: 'redhat-display';
+  src: url('fonts/RedHatDisplay-Black.eot');
+  src: url('fonts/RedHatDisplay-Black.eot?#iefix') format('embedded-opentype'),
+       url('fonts/RedHatDisplay-Black.woff2') format('woff2'),
+       url('fonts/RedHatDisplay-Black.woff') format('woff');
+       font-weight: 900;
+       font-style: normal;
+}
+
+
+
 /* Create a dark background. */
 body {
     background: #000;
@@ -22,7 +67,7 @@ canvas {
     background-color: #e00; /* Fallback color */
  
 }
-
+body,div{font-family: "Red Hat Display", sans-serif;}
 div{background-color:#e00 !important; top: 0vh; }
 div{animation: tada 1s cubic-bezier(.5,.2,.2,1.5); transition: all .3s ease;  border-radius: .5em;}
 
@@ -48,7 +93,7 @@ div:hover{background-color:#bbb !important;}
     font: 60px overpass;
     text-align: center;
     margin: 15vh auto; 
-    height: 70vh;/* 15% from the top and centered */
+    max-height: 70vh;/* 15% from the top and centered */
     padding: 20px;
     border: 0px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
@@ -70,7 +115,7 @@ div:hover{background-color:#bbb !important;}
 } 
 
 *{box-sizing:border-box;}
-blockquote{ opacity:0;  pointer-events:none;  animation: legalbug 2.5s ease forwards; background-color:#eee; font-size: 2vw; left:0; margin:0; padding: 1rem;}
+blockquote{ opacity:0;  pointer-events:none;  animation: legalbug 2.5s ease forwards; background-color:transparent; font-size: 2vw; left:0; margin:0; padding: 1rem;}
 
 blockquote:after{content:""; position:absolute; bottom:0; left:0; background-image:linear-gradient(0deg, #fff, transparent);display:block; width: 100%; height: 15em;   }
 
